tests/fail/0002_operator3.ec
op foo (x:int, l:int list) : int list = x :: <:int,int> l.